# ap_aggregator

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  main.py  mypy.ini  pyproject.toml
src/: display.py  feed.py
src/pages/: base.py  feed.py  feed_page.py  home.py  home_page.py
src/scrapers/: arxiv.py  base.py  paperswithcode.py  x.py
